fix: Proposal diff bugs.
* Fix: after clicking on version button, duplicate request are sent to
  the server.
* Fix: Hide the version button when the proposal is cencered or when
  the proposal is unvetted and the user is not admin or author.
* Fix: Title text is overlap in the mobile screen.

--- a/src/components/RecordWrapper/RecordWrapper.module.css
+++ b/src/components/RecordWrapper/RecordWrapper.module.css
@@ -19,6 +19,10 @@
   flex-wrap: wrap;
 }
 
+.flexWrap {
+  flex-wrap: wrap;
+}
+
 .eventTooltip {
   color: var(--text-secondary-color) !important;
 }
